# MonoGST

./: .gitignore  Makefile  README.md
KKG_Index/example/: result.txt
KeyKG_Index/example/: result.txt
data/Toronto/: graph.txt
data/example/: graph.txt  query.txt
results/: DBLP_ablation_MonoGSTPlus_result.txt  Dbpedia_ablation_MonoGSTPlus_result.txt  Dbpedia_ablation_tvedge_result.txt  LinkedMDB_g100_ImprovAPP_result.txt  MovieLens_PrunedDP_result.txt  MovieLens_ablation_MonoGSTPlus_result.txt  Toronto_2starh_result.txt  Toronto_DST_result.txt  Toronto_ablation_MonoGSTBasic_result.txt  Toronto_ablation_MonoGSTPlus_result.txt  Toronto_ablation_Other_result.txt  Toronto_ablation_womono_result.txt  example_2starh_result.txt  example_DST_result.txt  example_ImprovAPP_result.txt  example_KKG_result.txt  example_MonoGSTBasic_result.txt  example_MonoGSTPlus_result.txt  example_MonoGST_result.txt  example_PartialOPT_result.txt  example_PrunedDP_result.txt  example_ablation_MonoGSTBasic_result.txt  example_ablation_MonoGSTPlus_result.txt  example_ablation_tvedge_result.txt  example_ablation_wo_reselection_result.txt  example_ablation_wo_suspension_filtering_result.txt  example_ablation_wo_suspension_result.txt  example_ablation_womono_result.txt  example_ablation_wosusmono_result.txt  example_ablation_wosusp_result.txt  example_ablation_wotree_result.txt
src/2starh/: 2starh.cpp
src/DST/: CMakeLists.txt
src/DST/dst/: CMakeLists.txt
src/DST/dst/include/dst/: consts.hpp  dijkstra.hpp  dst.hpp  nadeau.hpp  partree.hpp  tree.hpp  utils.hpp
src/DST/dst/src/: dst.cpp
src/DST/main/: CMakeLists.txt
src/DST/main/src/: main.cpp
src/ImprovAPP/: ImprovAPP.cpp
src/MonoGST/include/: GlobalUtils.hpp  Graph.hpp  Improved2star.hpp  Improved2star_Abl.hpp  Log.hpp
src/MonoGST/src/: GlobalUtils.cpp  Log.cpp
src/MonoGST/tests/: test_Abl.cpp  test_Improved2star.cpp
src/PartialOPT/: PartialOPT.cpp
src/PrunedDP/: PrunedDP.cpp
src/kkg/: AdjacencyList.hpp  DistanceOracle.hpp  Load_Graph.hpp  Load_Query.hpp  Prepare_Test.hpp  Timer.hpp  Utilities.hpp
src/kkg/HL/: HL_all.hpp
src/kkg/KKG/: Key_KG_plus.hpp
src/kkg/test/: create_index.cpp  run_kkg.cpp
